# aws-lambda-wasmtime

./: .gitignore  Makefile  README.md
demo-component/: Cargo.toml  rustfmt.toml
demo-component/src/: bindings.rs  lib.rs
demo-component/wit/: world.wit
experiments/: README.md
experiments/bash/: Makefile  README.md  get_wasmtime.sh
experiments/bash/function/: Cargo.toml
experiments/bash/function/src/: main.rs
experiments/bash/runtime/: bootstrap
experiments/component/: Makefile  README.md
experiments/component/function/src/: bindings.rs  lib.rs
experiments/component/function/wit/: world.wit
experiments/component/generator/: Cargo.toml
experiments/component/generator/src/: main.rs
experiments/component/runtime/: Cargo.toml
experiments/component/runtime/src/: bindings.rs  main.rs
experiments/component/runtime/wit/: world.wit
experiments/python/: Makefile  README.md
experiments/python/function/src/: lib.rs
experiments/python/handler/: passing_in.py  passing_out.py  pyproject.toml
experiments/rust/: Makefile  README.md
experiments/rust/function/: Cargo.toml  README.md
experiments/rust/function/src/: lib.rs  wasm_handler.rs
experiments/rust/runtime/: Cargo.toml
experiments/rust/runtime/src/: main.rs  wasm_handler.rs
runtime/: Cargo.toml  build.rs
runtime/src/: main.rs  wasm_handler.rs
