[package]
name = "function"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
wit-bindgen-rt = { version = "0.35.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:function"

[package.metadata.component.bindings]
derives = ["serde::Serialize", "serde::Deserialize"]

[package.metadata.component.dependencies]
