[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[package.metadata]
component_world = "../demo-component/wit/world.wit"

[dependencies]
lambda_runtime = "0.13.0"
serde = "1"
serde_json = "1.0.133"
tokio = { version = "1", features = ["macros"] }
wasmtime = "26.0.1"
wasmtime-wasi = "26.0.1"

[build-dependencies]
cargo_metadata = "0.18.1"
